--- a/module.yaml
+++ b/module.yaml
@@ -1,6 +1,6 @@
-name: gitops-cp4s
+name: "gitops-cp4s"
 type: gitops
-description: Module to populate a gitops repo with the resources to provision cp4s
+description: "Module to populate a gitops repo with the resources to provision IBM Cloud Pak for Security"
 tags:
   - tools
   - gitops
@@ -13,11 +13,15 @@ versions:
       - id: gitops
         refs:
           - source: github.com/cloud-native-toolkit/terraform-tools-gitops.git
-            version: '>= 1.1.0'
+            version: ">= 1.1.0"
       - id: namespace
         refs:
           - source: github.com/cloud-native-toolkit/terraform-gitops-namespace.git
-            version: '>= 1.0.0'
+            version: ">= 1.0.0"
+      - id: catalogs
+        refs:
+          - source: github.com/cloud-native-toolkit/terraform-gitops-cp-catalogs.git
+            version: ">= 1.0.0"
     variables:
       - name: gitops_config
         moduleRef:
@@ -39,3 +43,8 @@ versions:
         moduleRef:
           id: gitops
           output: sealed_secrets_cert
+      - name: catalog
+        moduleRef:
+          id: catalogs
+          output: catalog_ibmoperators
+softwareProvider: ibm-cp
