variable default value changes

--- a/module.yaml
+++ b/module.yaml
@@ -47,4 +47,8 @@ versions:
         moduleRef:
           id: catalogs
           output: catalog_ibmoperators
+      - name: entitlement_key
+        moduleRef:
+          id: catalogs
+          output: entitlement_key
 softwareProvider: ibm-cp
